<resources>
    <string name="app_name" translatable="false">HotSwap</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="msg_subscribed" translatable="false">Subscribed to news topic</string>

    <!--Login Activity Strings-->
    <string name="label_google_sign_in" translatable="false">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in" translatable="false">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login" translatable="false">Firebase + Facebook Login</string>
    <string name="desc_facebook_login" translatable="false">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword" translatable="false">Use an email and password to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token" translatable="false">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="successfully_signed_out">You have been successfully signed out.</string>
    <string name="unsuccessfully_signed_out">Unable to sign you out.</string>
    <string name="verification_sent_to">Verification email sent to</string>
    <string name="failed_to_send_verification_email">Failed to send verification email.</string>

    <!-- List Item Activity Strings -->
    <string name="list_item_title">List an Item:</string>
    <string name="title_activity_list_item" translatable="false">ListItemActivity</string>

    <!-- Item Requests Activity Strings -->
    <string name="title_activity_item_requests" translatable="false">ItemRequestsActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation" translatable="false">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_navigation_search" translatable="false">NavigationSearchActivity</string>

    <string-array name="items">
        <item>iVacuum 6</item>
        <item>iVacuum 7</item>
    </string-array>

    <string-array name="item_descriptions">
        <item>My vacuum does have a headphone jack</item>
        <item>My vacuum does not have a headphone jack</item>
    </string-array>

    <!--Invite Friends popup strings-->
    <string name="send_text">Send Text</string>
    <string name="send_email">Send Email</string>
    <string name="post_to_facebook">Post To Facebook</string>

    <!--Invite friends strings-->
    <string name="invite_message">Hey I\'ve been using HotSwap to rent items that I need but don\'t want to buy! Check it out!</string>
    <string name="post_to_FB_url" translatable="false">https://hotswap.com</string>
    <string name="invite_email_subject">Join HotSwap!</string>

    <!--add details string-->
    <string name="enter_all_details">Please enter all details</string>

    <!--Add User Details UI strings-->
    <string name="first_name_label">First Name:</string>
    <string name="first_name_hint">Enter First Name</string>
    <string name="last_name_label">Last Name:</string>
    <string name="last_name_hint">Enter Last Name</string>
    <string name="phone_number_label">Phone Number:</string>
    <string name="phone_number_hint">Enter Phone Number</string>
    <string name="add_address">Add Address</string>
    <string name="add_payment">Add Payment Method</string>
    <string name="submit">Submit</string>
    <string name="picture_upload_hint">Tap on the picture to upload an avatar.</string>

    <!--Profile UI strings-->
    <string name="contact_info_label">Contact Info</string>
    <string name="addresses_label">Addresses</string>
    <string name="payment_label">Payment \nMethods</string>
    <string name="add_payment_to_profile"><u>+ Add Payment Method</u></string>
    <string name="items_label">Your Items</string>
    <string name="past_transactions"><u>View Past Transactions</u></string>
    <string name="invite_friends">Invite Friends</string>
    <string name="logout">Logout</string>
    <string name="current_balance">Current Balance:</string>
    <string name="add_balance">Add Balance</string>
    <string name="placeholder_name">Name</string>
    <string name="placeholder_member_since">Member Since:</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_phone_number">Phone Number</string>
    <string name="base_package_name" translatable="false">com.teamcaffeine.hotswap</string>
    <string name="unable_to_add_item_due_to_address">Unable to add your item. The address cannot be found. Please try again.</string>
    <string name="unable_to_add_address">Unable to add your item. The address cannot be found. Please try again.</string>
    <string name="unable_to_add_item">Unable to add your item. Please try again.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="delete">Delete</string>
    <string name="delete_address_question">Are you sure you want to delete this address?</string>
    <string name="delete_payment_question">Are you sure you want to delete this payment method?</string>
    <string name="delete_item_question">Are you sure you want to delete this item?</string>
    <string name="cancel">Cancel</string>
    <string name="validationErrors">Validation Errors</string>
    <string name="card_deleted">Card Deleted</string>
    <string name="member_since">Member Since: </string>
    <string name="card_added">Card Added</string>
    <string name="duplicate_card">Cannot add a duplicate card</string>
    <string name="required">Required.</string>

    <!--Home UI strings-->
    <string name="currently_renting">Currently Renting</string>
    <string name="pending_swaps">Pending Swaps</string>
    <string name="list_item_button">List A New Item</string>
    <string name="duplicate_item">You already have an item with that name. Choose another name.</string>
    <string name="enter_address_request">Please enter an address to your profile first!</string>

    <!--Item Details Activity Strings-->
    <string name="item_image">Item image</string>
    <string name="item_name">Item Name:</string>
    <string name="item_description">Item Description:</string>
    <string name="item_tags">Tags:</string>
    <string name="item_price">Price to Rent:</string>
    <string name="item_location">Location:</string>
    <string name="item_available_dates">Available Dates:</string>
    <string name="request_swap">Request Swap</string>
    <string name="message_owner">Message Owner</string>

    <!-- Login Activity Strings-->
    <string name="login_email_hint">Email Address</string>
    <string name="login_password_hint">Password</string>
    <string name="login_sign_in_text">SIGN IN</string>
    <string name="login_create_account_text">CREATE ACCOUNT</string>
    <string name="login_divider_text">OR</string>
    <string name="get_swapping">Get Swapping!</string>
    <string name="begin_a_swap">Begin a swap:</string>
    <string name="add_a_note_to_the_owner">Add a note to the owner</string>
    <string name="total_price">Total Price: </string>
    <string name="invalid_date_selected">Invalid date selected.</string>
    <string name="item_added">New item added</string>
    <string name="profile_pic_update_success">Successfully updated profile picture.</string>
    <string name="profile_pic_update_failed">Unable to update profile picture.</string>
    <string name="unable_change_image">Unable to change image.</string>
    <string name="GPS_no_signal">GPS signal not found</string>
    <string name="enter_zipcode">Please enter a valid zipcode</string>
    <string name="existing_transaction">You already have a transaction for this item for these days.</string>
    <string name="something_wrong">Whoops! Something went wrong.</string>
    <string name="unable_to_find_owner">Unable to find owner in database, cannot start chat</string>
    <string name="enter_all_fields">Please enter all fields.</string>
    <string name="select_address">Please select an address.</string>
    <string name="hint_item_name">Item Name</string>
    <string name="hint_item_tags">Item Tags (separated by commas)</string>
    <string name="hint_item_description">Item Description</string>
    <string name="hint_price">Price</string>
    <string name="list_item">List Item</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="where_are_you_swapping">Where are you swapping?</string>
    <string name="save">Save</string>
    <string name="x">X</string>
    <string name="add_card_button">Add Card</string>
    <string name="name">Name</string>
    <string name="last_message">Last message</string>
    <string name="search">Search</string>
    <string name="set_location">Set Location</string>
    <string name="item_filters">Item Filters</string>
    <string name="user">User</string>
    <string name="item">Item</string>
    <string name="copy">Copy</string>
    <string name="set_tags">Set Tags</string>
    <string name="distance_kilometers">km</string>

    <!-- Add Balance Activity -->
    <string name="amount_to_transfer">Amount to Transfer</string>
    <string name="enter_payment">Please enter your payment information below:</string>

    <!-- Empty Views -->
    <string name="empty_items">No items to display.</string>

</resources>
