<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/balanceText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_balance"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <EditText
        android:id="@+id/editTransferAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/amount_to_transfer"
        android:inputType="number|numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_payment"
        android:textAlignment="center"
        android:textStyle="bold" />

    <com.stripe.android.view.CardInputWidget
        android:id="@+id/cardInputWidget"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </com.stripe.android.view.CardInputWidget>

    <Button
        android:id="@+id/transferButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/add_balance" />

</LinearLayout>