<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:background="@color/com_facebook_button_background_color_focused_disabled"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="20dp">

    <Button
        android:id="@+id/btnSendText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/hotswap_button"
        android:text="@string/send_text" />

    <Button
        android:id="@+id/btnSendEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/hotswap_button"
        android:text="@string/send_email" />

    <Button
        android:id="@+id/btnPostToFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/hotswap_button"
        android:text="@string/post_to_facebook" />

</LinearLayout>
