<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context="com.teamcaffeine.hotswap.swap.ItemDetailsActivity">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imgItemImage"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:contentDescription="@string/item_image"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtNameLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_name"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/txtItemName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtDescriptionLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_description"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/txtItemDescription"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTagsLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_tags"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/txtItemTags"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPriceLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_price"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/txtItemPrice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtLocationLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_location"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/txtItemLocation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRequestSwap"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="0.5"
        android:background="@drawable/hotswap_button"
        android:text="@string/request_swap"
        android:textColor="@color/textColorPrimary" />

    <Button
        android:id="@+id/btnMessageOwner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="0.5"
        android:background="@drawable/hotswap_button"
        android:text="@string/message_owner"
        android:textColor="@color/textColorPrimary" />

</LinearLayout>
